# sortserver

./: CMakeLists.txt  README.md  cpuMergesort.cpp  cpuMergesort.h  cpu_sort_test.cpp  cuMergesort.cu  cuMergesort.h  dockerfile  gpuMergesort.cu  gpuMergesort.h  gpu_sort_test.cpp  main.cpp  mergesort.cu  sortserver.cpp  sortserver.h  sortserver.pro  test.cpp
